任意のメッセージ

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -12,21 +12,11 @@
     <h1>株式会社TECH</h1>
 
     <ul>
-        <a href="">
-            <li>ホーム</li>
-        </a>
-        <a href="">
-            <li>企業情報</li>
-        </a>
-        <a href="">
-            <li>会社概要</li>
-        </a>
-        <a href="">
-            <li>よくある質問</li>
-        </a>
-        <a href="">
-            <li>お問い合わせ</li>
-        </a>
+        <li><a href="">ホーム</a></li>
+        <li><a href="">企業情報</a></li>
+        <li><a href="">会社概要</a></li>
+        <li><a href="">よくある質問</a></li>
+        <li><a href="">お問い合わせ</a></li>
     </ul>
 
     <img src="img/mv.png">
